# scientific-marginalia

./: archives.html  blog.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html  units-intro.html
author/: michael-bocek.html
category/: units.html
content/: 2024_01_01_units.rst  2_a_tour_of_scales
docs/: _config.yml  index.markdown
docs/_posts/: 2022-05-30-welcome-to-jekyll.markdown
posts/2024/01/units-intro/: index.html
tag/: measurement.html  units.html
