[tool.poetry]
name = "scientific-marginalia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scientific_marginalia"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"
markdown = "^3.5.1"
ghp-import = "^2.1.0"
pelican = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
